--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,17 @@
 .contant_box_404 {
   margin-top: -50px;
 }
+
+*::-webkit-scrollbar {
+  width: '0.2em';
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: 'inset 0 0 6px rgba(0,0,0,0.00)';
+}
+
+*::-webkit-scrollbar-thumb {
+  /* background-color: 'rgba(0,0,0,.1)'; */
+  outline: '1px solid slategrey';
+  background-color: #39ac31;
+}
